--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
 <meta content="telephone=no" name="format-detection" />
 <meta content="email=no" name="format-detection" />
-<title>支付失败</title>
+<title>充值页111</title>
 <meta name="Keywords" content=""/>
 <meta name="description" content=""/>
 <link href="css/main.css" rel="stylesheet" type="text/css">
@@ -23,14 +23,68 @@ var _hmt = _hmt || [];
 
 
 <body id="section1">
-	<div class="wrap">
-        <div class="main_zf_center">
-            <p><img src="images/icon_failure.png"></p>
-            <p class="text_big red">支付失败</p>
-            <div class="wrap_footer"><a href="#">返回游戏</a></div>
+    <div class="masked" id="masked" style="display:none"></div>
+    <!--email弹窗-->
+    <div class="part1_tc_email" style="display:none;"> 
+      <div class="tc_email_bg">
+        <div class="closed"><img src="images/recharge_main_tc_close.png" alt=""></div>
+        <div class="email_wrap">
+            <P class="pay_ewm_img"><img src="images/recharge_ewm_img_07.png"></P>
+            <P class="wx_text">使用微信扫码付款</P>
+            <P class="pay_wx_img"><img src="images/wx_icon.png"></P>
         </div>
-      
+      </div>   
+    </div> 
+	<div class="wrap">
+        <div class="wrap_header">
+        	<div class="header_return"><a  href="#">返回游戏</a></div>
+            <div class="header_title"><a  href="#">充值</a></div>
+            <div class="header_tip"><a  href="javascript:;"><img src="images/recharge_header_ico.png"/></a></div>
+        </div>
+        <div class="main-container">
+        	<div class="main_cz">
+                <div class="recharge_price">
+                    <P>648元豪华礼包</P>
+                    <h2><em>￥</em>648.00</h2>
+                </div>
+                <div class="pay_type">
+                    <ul>
+                        <li class="active">
+                            <div class="type">
+                                <i class="wx"></i>
+                                <span>微信支付</span>
+                            </div>
+                            <span class="input_style radio_bg radio_bg_check"><input type="radio" name="type" value="and" checked="checked"></span>
+                        </li>
+                        <li>
+                            <div class="type">
+                                <i class="zfb"></i>
+                                <span>支付宝支付</span>
+                            </div>
+                            <span class="input_style radio_bg"><input type="radio" name="type" value="ios"></span>
+                        </li>
+                        <li>
+                            <div class="type">
+                                <i class="wxsm"></i>
+                                <span>微信扫码</span>
+                            </div>
+                            <span class="input_style radio_bg"><input type="radio" name="type" value="ios"></span>
+                        </li>
+                        <li class="last">
+                            <div class="type">
+                                <i class="zfbsm"></i>
+                                <span>支付宝扫码</span>
+                            </div>
+                            <span class="input_style radio_bg"><input type="radio" name="type" value="ios"></span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="wrap_footer"><a href="#">确认支付￥648元豪华礼包</a></div>
+       
     </div>  
+	
 </div>
 
 <script type="text/javascript" src="js/jquery.min.js"></script> 
