--- a/question.html
+++ b/question.html
@@ -30,7 +30,7 @@ var _hmt = _hmt || [];
             <div class="header_title"><a  href="#">支付环节：信息答疑</a></div>
         </div>
         <div class="main_dayi_center">
-            <P class="question">Q：如何充值？</P>
+            <P class="question" style="margin-top: 0.3rem;">Q：如何充值？</P>
             <P class="answer">A:在游戏主界面右上角点击”购物车”按钮，然后在界面中找到需要充值的内容，点击金额位置即可根据步骚充值;</P>
             <P  class="question">Q∶为什么充值后没有收到相关奖励?</P>
             <P class="answer">A:请先确认是否完成充值并且已扣款。充值可能会发生短时间的延迟，请稍候或重新登入游戏查看。若确实充值成功且已扣款,请您在游戏内“客服”系统，反馈相关问题。</P>
