--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
 <meta content="telephone=no" name="format-detection" />
 <meta content="email=no" name="format-detection" />
-<title>充值页111</title>
+<title>充值页</title>
 <meta name="Keywords" content=""/>
 <meta name="description" content=""/>
 <link href="css/main.css" rel="stylesheet" type="text/css">
