--- a/payment.html
+++ b/payment.html
@@ -35,7 +35,7 @@ var _hmt = _hmt || [];
                 </div>
                 <div class="pay_ewm">
                     <P class="pay_ewm_img"><img src="images/recharge_ewm_img_07.png"></P>
-                    <P class="wx_text">使用微信扫码付款</P>
+                    <P class="wx_text1">使用微信扫码付款</P>
                     <P class="pay_wx_img"><img src="images/wx_icon.png"></P>
                 </div>
                 </div>
